@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-15T02:12:00Z",
-  "count_outdated" : 337,
-  "uniques_outdated" : 203,
+  "timestamp" : "2022-09-18T02:21:08Z",
+  "count_outdated" : 340,
+  "uniques_outdated" : 206,
   "count" : 342,
   "uniques" : 208,
   "clones" : [
-    {
-      "timestamp": "2022-09-03T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ]
-    },
     {
       "timestamp": "2022-09-06T00:00:00Z",
       "count": 2,
