@@ -1,12 +1,7 @@
 {
-  "count": 5,
-  "uniques": 4,
+  "count": 2,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2022-09-03T00:00:00Z",
-      "count": 3,
-      "uniques": 3
-    },
     {
       "timestamp": "2022-09-06T00:00:00Z",
       "count": 2,
