@@ -1,3 +1,11 @@
+2022-09-18T02:21:08Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3075548730
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 203 337 / 208 342
+* notice: next accum: outdated-unq outdated-all / unq all: 206 340 / 208 342
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-03] / []
+
 2022-09-15T02:12:00Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3057334247
 * notice: last 14d: unq all: 4 5
